--- a/src/views/pages/css/login.css
+++ b/src/views/pages/css/login.css
@@ -22,6 +22,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.gambar-login-1 p {
+    font-size: 20px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .login-1 {
     margin: auto;
     padding: 20px;
