--- a/src/views/pages/css/landing.css
+++ b/src/views/pages/css/landing.css
@@ -92,11 +92,15 @@
 .menu-toggle {
     display: none;
     cursor: pointer;
+    width: 25px; /* Ubah lebar toggle menu sesuai kebutuhan Anda */
+    height: 35px; /* Ubah tinggi toggle menu sesuai kebutuhan Anda */
+    position: absolute;
+    left: 25px; 
 }
 
 .menu-toggle span {
     display: block;
-    width: 30px;
+    width: 100%;
     height: 3px;
     background-color: #333;
     margin: 6px 0;
@@ -166,6 +170,7 @@
     }
 
     .logo-bekantan img {
+        margin-top: 10px;
         height: 50px;
     }
 }
