--- a/src/views/uikit/css/data-gallery.css
+++ b/src/views/uikit/css/data-gallery.css
@@ -134,7 +134,7 @@
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    padding-right: 20%; 
+    padding-right: 20%;
 }
 
 .p-edit-icon {
@@ -191,6 +191,17 @@
     border-radius: 4px;
     font-family: Arial, Helvetica, sans-serif;
   }
+
+.button-view {
+    height: 40px;
+    width: 70px;
+    cursor: pointer;
+    background-color: rgb(164, 0, 153);
+    border: none;
+    color: white;
+    border-radius: 5px;
+    margin-right: 20px;
+}
 
   
   
