--- a/src/views/uikit/css/data-tnc.css
+++ b/src/views/uikit/css/data-tnc.css
@@ -6,6 +6,94 @@
     font-weight: bold;
 }
 
+.modal {
+    display: flex; 
+    align-items: start; 
+    justify-content: end; 
+    position: fixed; 
+    z-index: 1;
+    top: 100px;
+    left: 0; 
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0);
+    overflow: auto;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    box-shadow:  0 0 5px rgba(0, 0, 0, 0.347);
+    width: 100%; 
+    max-width: 600px; 
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    animation: slideInRight 0.5s ease-in-out; 
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+.modal-input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+}
+.modal-form-group{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.modal-button-suceess {
+    width: 100%;
+    padding: 5px, 5px, 5px, 5px;
+    height: 40px;
+    border: none;
+    color: white;
+    font-weight: bold;
+    background-color: #28a745;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.modal-button-suceess:hover {
+    background-color: #218838;
+}
+.modal-button-danger {
+    width: 100%;
+    padding: 5px, 5px, 5px, 5px;
+    height: 40px;
+    border: none;
+    color: white;
+    font-weight: bold;
+    background-color: #bf2121;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease; 
+}
+.modal-button-danger:hover {
+    background-color: #951a1a;
+}
+
+@keyframes slideInRight {
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(0);
+    }
+  }
+
+
 .top-tabel-tnc {
     background-color: rgb(233, 233, 233);
     border-radius: 10px;
@@ -77,10 +165,12 @@
     transition: background-color 0.3s ease;
 }
 
-.create-data-tnc:hover {
+.create-data-access:hover {
     background-color: #218838;
 }
 
 .bold-text{
     font-weight: bold;
 }
+
+
