--- a/src/views/pages/css/landing.css
+++ b/src/views/pages/css/landing.css
@@ -123,13 +123,10 @@
 .button-content button {
     height: 60px;
     width: 250px;
-    border: none;
     border-radius: 10px;
-    background-color: orange;
     color: white;
     font-size: 16px;
     font-weight: bold;
-    cursor: pointer;
     margin-bottom: 20px;
 }
 
@@ -154,8 +151,6 @@
 
   .content-2 {
     height: 100vh;
-    padding: 40px 20px; 
-    background-color: #f5f5f5; 
     color: #333; 
 }
 
@@ -170,8 +165,17 @@
 .content-2 h1 span {
     color: orange;
 }
-
+.last-content-2 p {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: gray;
+}
 .content-2 .text-content-2 {
+    padding-right: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: justify;
     font-size: 18px;
     margin: 0 auto;
@@ -184,49 +188,9 @@
     margin-bottom: 15px; 
 }
 
-.text2-content-2 {
-    font-size: 18px;
-    color: #444; 
-    line-height: 1.6; 
-    margin: 0 auto; 
+.text2-content-2 p {
+    text-align: center;
 }
-
-.text2-content-2 ul {
-    text-align: left; 
-    padding-left: 20px;
-}
-
-
-.masalah h1:hover, .content-2 h1:hover {
-    color: #ff8c00; /* Darker shade of orange */
-    cursor: pointer; /* Indicate interactivity */
-    transition: color 0.3s ease-in-out; /* Smooth transition */
-}
-
-.list-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Two equal columns */
-    gap: 40px; /* Spacing between columns */
-    position: relative; /* For the vertical line positioning */
-    padding: 20px; /* Space around the list */
-}
-
-.list-column {
-    list-style-type: none; /* Remove default list styling */
-    padding: 0; /* Remove default padding */
-}
-
-.list-container::after {
-    content: '';
-    position: absolute;
-    left: 50%;
-    top: 0;
-    bottom: 0;
-    width: 2px; /* Width of the vertical line */
-    background-color: orange; /* Orange color for the vertical line */
-    transform: translateX(-50%); /* Center the line */
-}
-
 
 .content-3 {
     height: 100vh;
